# Peripheral_Pulse_Analyzer

./: .gitattributes  .gitignore  README.md  pyproject.toml
data/: HEALTHY_Usha_08-12-2016_23-44-37_BI_01_RA.dat.txt
peripheral_pulse_analyzer/: peripheral_pulse_analyzer.py
tests/: test_peripheral_pulse_analyzer.py
